[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Asynchronous, GTK+-based, GUI library, inspired by Elm, written in Rust"
documentation = "https://docs.rs/relm/"
edition = "2018"
license = "MIT"
name = "relm"
readme = "README.adoc"
repository = "https://github.com/antoyo/relm"
version = "0.20.0"

[badges.appveyor]
branch = "master"
repository = "antoyo/relm"

[badges.travis-ci]
branch = "master"
repository = "antoyo/relm"

[dependencies]
cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core"}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core"}
glib-sys = {git = "https://github.com/gtk-rs/gtk-rs-core"}
gobject-sys = "^0.10.0"
gtk4 = {git = "https://github.com/gtk-rs/gtk4-rs"}
libc = "^0.2.54"
log = "^0.4.6"
quote = "1.0.9"

[dependencies.syn]
features = ["full"]
version = "1.0.72"

[[package.metadata.release.pre-release-replacements]]
file = "README.adoc"
replace = "relm = \"{{version}}\""
search = "relm = \"[a-z0-9^\\.-]+\""

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
replace = "relm = \"{{version}}\""
search = "relm = \"[a-z0-9^\\.-]+\""
