[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Examples for relm"
license = "MIT"
name = "relm-examples"
version = "0.20.0"
edition = "2018"

[dev-dependencies]
chrono = "0.4"
gdk = "^0.13.0"
glib = "^0.10.0"
gtk = "^0.9.0"
gtk-test = "^0.6"
rand = "^0.5.1"
relm = "0.20.0"
relm-derive = "0.20.0"
relm-test = "0.20.0"

[dev-dependencies.gio]
version = "^0.9.0"
